# debugiq

./: .env.example  .gitignore  HOJA_DE_RUTA.md  PHASE_0_PLAN.md  PROJECT_STATUS_AND_ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml
apps/api/: pyproject.toml  railway.toml
apps/api/src/: main.py
apps/api/src/analytics/: router.py
apps/api/src/auth/: router.py
apps/api/src/core/: config.py  dependencies.py  security.py
apps/api/src/db/: models.py  session.py
apps/api/src/db/migrations/: env.py
apps/api/src/db/migrations/versions/: 1183644aa765_add_analysis_results_composite_indexes.py  6d0a6f152748_initial_schema.py
apps/api/src/results/: router.py
apps/api/src/teams/: router.py
apps/api/src/users/: router.py
apps/api/tests/: conftest.py  test_analytics.py  test_auth.py  test_health.py  test_teams.py
apps/vscode-extension/: .eslintrc.cjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json  vitest.config.ts
apps/web/: .env.local.example  .gitignore  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: RELEASE_CHECKLIST.md
docs/decisions/: 001-llm-in-extension.md
docs/deploy/: DEPLOY_SETUP.md
docs/issues/: e2e-dashboard-smoke-debt.md  issue-e2e-dashboard-smoke.md  issue-login-register-ui.md  web-login-register-ui-debt.md
docs/operations/: p3-p4-playbook-2026-04-05.es.md  p3-p4-playbook-2026-04-05.md
docs/original/: DebugIQ_Arquitectura_Tecnica.docx  (+2 more)
infra/: railway.toml
(+74 files in other folders)
